Update Recap page to #920

--- a/recap.html
+++ b/recap.html
@@ -7602,6 +7602,86 @@
                         <td align="left" valign="top">Canada is home to countless brooks that meander through lush forests and rugged landscapes. These babbling waterways provide essential habitats for fish like brook trout, a prized catch for anglers in Canadian waters. Whether you're hiking in Algonquin Park or fishing in Newfoundland's rivers, encountering a brook is a tranquil reminder of Canada's pristine natural beauty. So, next time you wander through Canada's wilderness, listen closely - the whispers of a brook might just lead you to an unforgettable adventure!</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1855598987278950404" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">911</td>
+                        <td valign="top" align="center">Nov 10, 2024</td>
+                        <td valign="top" align="center"><strong>WRENS</strong><br>🪖👩⚓️</td>
+                        <td align="center" valign="top">4.50</td>
+                        <td align="left" valign="top">During World War II, over 7,000 women proudly served in the <a href="https://www.thecanadianencyclopedia.ca/en/article/womens-royal-canadian-naval-service" target="_blank">Women's Royal Canadian Naval Service</a> (WRCNS), affectionately known as the Wrens. Established in 1942, these trailblazing women supported Canada's war effort by taking on critical roles in communications, intelligence, and logistics - paving the way for greater inclusion of women in the military. The WRCNS was disbanded in 1946, but their legacy continues to be celebrated today, with many Remembrance Day ceremonies honouring their service alongside the men and women of the Canadian Armed Forces. Their dedication and resilience are a testament to the important role women have played in shaping Canada's military history. As we remember and honour our veterans, the contributions of the Wrens should never be forgotten.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1855948350983471236" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">912</td>
+                        <td valign="top" align="center">Nov 11, 2024</td>
+                        <td valign="top" align="center"><strong>LAPEL</strong><br>🌺🎗️🪖</td>
+                        <td align="center" valign="top">4.35</td>
+                        <td align="left" valign="top">On November 11, Canadians commemorate Remembrance Day by wearing a red poppy on their lapels to honour military personnel who served and sacrificed in conflicts. The poppy is worn on the left side, close to the heart, symbolizing respect and remembrance. Inspired by the iconic World War I poem "In Flanders Fields" by Lieutenant Colonel John McCrae, this tradition of wearing poppies began in 1921, and the phrase "lest we forget" serves as a powerful reminder of the importance of remembering those who served Canada. This simple yet significant act of wearing a poppy reminds us all of the courage and sacrifice of past generations and honours their memory with deep reverence.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1856301592565219541" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">913</td>
+                        <td valign="top" align="center">Nov 12, 2024</td>
+                        <td valign="top" align="center"><strong>FOYER</strong><br>🏛️</td>
+                        <td align="center" valign="top">5.49</td>
+                        <td align="left" valign="top">The <a href="https://www.ourcommons.ca/heritage/en/parliamentary-buildings/past/house-of-commons-foyer" target="_blank">House of Commons foyer</a> is the Centre Block's primary meeting place. It has vaulted ceilings, marble floors and dramatic lighting. Many Canadians recognize the foyer from media scrums where journalists ask members of Parliament questions after question period and after debates in the House of Commons. The foyer's lower level contains sculptures that depict themes of art, history and philosophy. In the upper level, the stonework shows the coat of arms of each Canadian province. The foyer also contains framed portraits of Canada's prime ministers, contributing to the foyer's dignified character.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1856676358811705768" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">914</td>
+                        <td valign="top" align="center">Nov 13, 2024</td>
+                        <td valign="top" align="center"><strong>OXIDE</strong><br>🏭🪨⛏️</td>
+                        <td align="center" valign="top">4.69</td>
+                        <td align="left" valign="top"><a href="https://natural-resources.canada.ca/our-natural-resources/minerals-mining/mining-data-statistics-and-analysis/minerals-and-the-economy/20529" target="_blank">Canada's mining industry</a> plays a crucial role in the global supply of metal oxides, which are key components in producing everything from batteries to electronics. Iron oxide, for example, is an essential ingredient in the steel production process, and Canada is a leading producer of iron ore, particularly from the mines of Quebec and Newfoundland and Labrador. These oxides are not just by-products but vital resources that drive innovation and manufacturing around the world. Canada’s vast mineral wealth ensures its place at the forefront of industrial development, contributing to technology and infrastructure on a global scale.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1857125465787408850" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">915</td>
+                        <td valign="top" align="center">Nov 14, 2024</td>
+                        <td valign="top" align="center"><strong>LYMPH</strong><br>🦠⚕️🥼</td>
+                        <td align="center" valign="top">4.34</td>
+                        <td align="left" valign="top">Canada has made significant strides in medical research, particularly in the field of lymphoma treatment. Lymphoma, a cancer of the lymphatic system that includes lymph nodes, has seen breakthroughs thanks to Canadian scientists and medical teams. The development of immunotherapies and targeted treatments, like CAR-T cell therapy, has given hope to thousands of Canadians diagnosed with this disease. In fact, Canada is at the forefront of clinical trials and research for new lymphoma treatments, with institutions like the <a href="https://www.uhn.ca/OurHospitals/PrincessMargaret" target="_blank">Princess Margaret Cancer Centre</a> in Toronto playing a pivotal role in advancing care for lymphoma patients.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1857422557244198986" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">916</td>
+                        <td valign="top" align="center">Nov 15, 2024</td>
+                        <td valign="top" align="center"><strong>PEONY</strong><br><img src="images/recap/peony.jpg"></td>
+                        <td align="center" valign="top">4.12</td>
+                        <td align="left" valign="top">Peonies are a beloved flower in Canadian gardens, known for their vibrant blooms and resilience to our northern climate. The <a href="https://peony.ca/" target="_blank">Canadian Peony Society</a>, established in 1998, is dedicated to the cultivation and appreciation of these beautiful flowers. Peonies are often seen as a symbol of prosperity and good fortune in many cultures, and their lush blossoms make them a popular choice for Canadian gardens. With over 30 species of peonies found worldwide, they thrive in Canada's diverse climates from coast to coast!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1857793185218539612" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">917</td>
+                        <td valign="top" align="center">Nov 16, 2024</td>
+                        <td valign="top" align="center"><strong>NAKED</strong><br>🏖️🍑🎶</td>
+                        <td align="center" valign="top">5.06</td>
+                        <td align="left" valign="top">Did you know Canada is home to some famous nude beaches, like Vancouver's <a href="https://visit.ubc.ca/see-and-do/gardens-and-nature/wreck-beach/" target="_blank">Wreck Beach</a>, one of the largest in North America? Not only do Canadians have a reputation for embracing natural beauty, but we’ve also got "naked" talent in our music scene! From the bold and fearless rocker <a href="https://herroyalmajestys.com/bif-naked/" target="_blank">Bif Naked</a>, to the fun and quirky <a href="https://www.barenakedladies.com/" target="_blank">Barenaked Ladies</a>, Canadian culture has a knack for celebrating individuality. So whether you're enjoying nature or jamming out, there's always a place for "naked" fun in Canada!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1858137139856245163" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">918</td>
+                        <td valign="top" align="center">Nov 17, 2024</td>
+                        <td valign="top" align="center"><strong>YARDS</strong><br>🏈🍁📏</td>
+                        <td align="center" valign="top">4.89</td>
+                        <td align="left" valign="top">It's Grey Cup Sunday! In Canadian football, the game revolves around gaining those all-important yards - and in Canada there is more ground to cover! The CFL field is 110 yards long, compared to the NFL's 100 yards, making each play a battle for just a bit more space. Fans across Canada will be cheering as teams charge down the field, fighting for every yard at the <a href="https://www.cfl.ca/category/111th-grey-cup/" target="_blank">111th Grey Cup in Vancouver</a>. Whether it's a sprint to the end zone or a nail-biting finish, Canada’s love for the game is about heart, hustle, and those extra few yards that make all the difference!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1858532427582328936" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">919</td>
+                        <td valign="top" align="center">Nov 18, 2024</td>
+                        <td valign="top" align="center"><strong>QUAFF</strong><br>🍻</td>
+                        <td align="center" valign="top">5.02</td>
+                        <td align="left" valign="top">In Canada, the art of quaffing - a hearty drink enjoyed with friends - has long traditions rooted in gatherings around local brews. From coast to coast, Canada is famous for its craft breweries, from Halifax’s historic Alexander Keith’s to the craft beer scene in British Columbia. Canadians quaff everything from classic ales to innovative flavours like maple stouts and fruity IPAs. Whether it’s for après-ski in Whistler or a summer’s day at a Toronto patio, there's always a reason in Canada to quaff a refreshing drink and celebrate together!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1858866879500001649" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">920</td>
+                        <td valign="top" align="center">Nov 19, 2024</td>
+                        <td valign="top" align="center"><strong>FIGHT</strong><br>🤍</td>
+                        <td align="center" valign="top">4.67</td>
+                        <td align="left" valign="top">In Canada, fighting stigma around mental health is crucial, and one of the unique initiatives leading the charge is <a href="https://www.facebook.com/groups/operationwhiteheart/" target="_blank">Operation White Heart</a>. Founded in 2022 in Saint John, New Brunswick, this movement encourages people to place a white heart made of garden stones in their yards to show solidarity with those struggling with mental health issues. The initiative aims to spark conversations, remind people they are not alone, and help remove the stigma surrounding mental health and suicide prevention. By simply planting a white heart, individuals are visibly supporting others in their communities, reminding everyone that mental health matters. This simple yet powerful act has spread across the country, making a significant impact on how Canadians approach the topic of mental health.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1859220119722901597" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -8624,6 +8704,17 @@
                   <tr><td align="center" valign="top">908</td><td align="center" valign="top"><strong>IVORY</strong></td></tr>
                   <tr><td align="center" valign="top">909</td><td align="center" valign="top"><strong>CHIMO</strong></td></tr>
                   <tr><td align="center" valign="top">910</td><td align="center" valign="top"><strong>BROOK</strong></td></tr>
+
+                  <tr><td align="center" valign="top">911</td><td align="center" valign="top"><strong>WRENS</strong></td></tr>
+                  <tr><td align="center" valign="top">912</td><td align="center" valign="top"><strong>LAPEL</strong></td></tr>
+                  <tr><td align="center" valign="top">913</td><td align="center" valign="top"><strong>FOYER</strong></td></tr>
+                  <tr><td align="center" valign="top">914</td><td align="center" valign="top"><strong>OXIDE</strong></td></tr>
+                  <tr><td align="center" valign="top">915</td><td align="center" valign="top"><strong>LYMPH</strong></td></tr>
+                  <tr><td align="center" valign="top">916</td><td align="center" valign="top"><strong>PEONY</strong></td></tr>
+                  <tr><td align="center" valign="top">917</td><td align="center" valign="top"><strong>NAKED</strong></td></tr>
+                  <tr><td align="center" valign="top">918</td><td align="center" valign="top"><strong>YARDS</strong></td></tr>
+                  <tr><td align="center" valign="top">919</td><td align="center" valign="top"><strong>QUAFF</strong></td></tr>
+                  <tr><td align="center" valign="top">920</td><td align="center" valign="top"><strong>FIGHT</strong></td></tr>
 
                </tbody>
             </table>
