--- a/test/index.html
+++ b/test/index.html
@@ -179,7 +179,7 @@
       height: calc(100vh - 98px);
       justify-content: center;
       position: absolute;
-      width: calc(50vw - 3x100px);
+      width: calc(50vw - 300px);
       overflow: hidden; 
       background-color: red;
     }
