--- a/test/index.html
+++ b/test/index.html
@@ -176,7 +176,7 @@
       align-items: center;
       margin-top: 98px;
       display: flex;
-      height: calc(100vh - 98px);
+      height: 100vh;
       justify-content: center;
       position: absolute;
       width: calc(50vw - 300px);
@@ -304,7 +304,7 @@
         display: none;
       }
     }
-    @media screen and (max-width: 1400px) {
+    @media screen and (max-width: 1400px) and (max-height: 690px) {
       div.adbox_6 {
         display: none;
       }
