- Fixing test page

--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  <!--added from original-->
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <script src="/assets/assets/js/video_ad.js" defer=""></script>
+  <script src="/test/assets/assets/js/video_ad.js" defer=""></script>
 
   <script type="text/javascript" src="https://portal.cdn.yollamedia.com/storage/tag/ps6d46b18362b4075b4074ad02399f36e91e9d429e.js"></script>
 
@@ -451,7 +451,7 @@
           </div>
         </div>
         <div style="margin: 0 auto; margin-top: 20px; height: 100px; width: 100px;">
-          <img src="assets/assets/leaf_load.png" alt="Canuckle Loading Screen" width="100" height="100">
+          <img src="test/assets/assets/leaf_load.png" alt="Canuckle Loading Screen" width="100" height="100">
         </div>
       </div>
       <script src="flutter_bootstrap.js?version=20241030" async></script>
