--- a/test/index.html
+++ b/test/index.html
@@ -451,7 +451,7 @@
           </div>
         </div>
         <div style="margin: 0 auto; margin-top: 20px; height: 100px; width: 100px;">
-          <img src="test/assets/assets/leaf_load.png" alt="Canuckle Loading Screen" width="100" height="100">
+          <img src="assets/assets/leaf_load.png" alt="Canuckle Loading Screen" width="100" height="100">
         </div>
       </div>
       <script src="flutter_bootstrap.js?version=20241030" async></script>
