Update Recap page to #930

--- a/recap.html
+++ b/recap.html
@@ -7683,6 +7683,87 @@
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1859220119722901597" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
 
+                     <tr>
+                        <td valign="top" align="center">921</td>
+                        <td valign="top" align="center">Nov 20, 2024</td>
+                        <td valign="top" align="center"><strong>JETTY</strong><br>🌊🪨⚓️</td>
+                        <td align="center" valign="top">5.01</td>
+                        <td align="left" valign="top">In Canada, jetties are a common sight along the coastlines, providing protection for harbours and enhancing the beauty of waterfront areas. One notable example is the <a href="https://parks.canada.ca/lhn-nhs/qc/chambly/culture/architecture/jetee-federal-wharf" target="_blank">Chambly Jetty</a> in Quebec, which stretches into the Richelieu River. This historic jetty was originally built to help guide boats and protect the harbour from strong currents. Today, it's a popular spot for locals and visitors alike, offering scenic views and a glimpse into Canada's maritime heritage.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1859571928865951766" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">922</td>
+                        <td valign="top" align="center">Nov 21, 2024</td>
+                        <td valign="top" align="center"><strong>GIZMO</strong><br>🛰️📱🎥</td>
+                        <td align="center" valign="top">5.06</td>
+                        <td align="left" valign="top">Canada has a proud history of tech innovation, with groundbreaking gizmos like the Canadarm, the BlackBerry smartphone, and the IMAX theatre system. Inventions like these have shaped industries around the world showing that Canadian tech has made a global impact. The Canadarm helped astronauts build the International Space Station, BlackBerry revolutionized mobile communication, and IMAX brought breathtaking visuals to theatres globally. Canada's knack for creating world-changing gizmos shows that tech innovation is truly in our DNA!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1859947444672295246" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">923</td>
+                        <td valign="top" align="center">Nov 22, 2024</td>
+                        <td valign="top" align="center"><strong>LYCRA</strong><br>👕🧵🧘</td>
+                        <td align="center" valign="top">4.57</td>
+                        <td align="left" valign="top">Canadian company <a href="https://shop.lululemon.com/en-ca/" target="_blank">Lululemon</a>, based in Vancouver, has built a reputation for high-quality athletic wear, including items made with Lycra. Known for its stretchy, durable fabric, Lycra helps Lululemon's products stand up to all kinds of athletic activities. From yoga pants to running shorts, their use of lycra blends with other materials ensures a comfortable fit, making it a staple for active Canadians everywhere!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1860288942613864464" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">924</td>
+                        <td valign="top" align="center">Nov 23, 2024</td>
+                        <td valign="top" align="center"><strong>CHAFF</strong><br>🌾🧑‍🌾🚜</td>
+                        <td align="center" valign="top">4.67</td>
+                        <td align="left" valign="top">Canada is a global leader in grain production, particularly wheat, with the Prairie provinces - Saskatchewan, Alberta, and Manitoba - producing much of the nation's crop. During the harvest, farmers separate the grain from the "chaff," the protective husk. While the grain becomes flour for bread and other products, chaff has its uses too, often turned into animal feed or used for soil enrichment. Canada's agricultural industry plays a vital role in global food supply, contributing to sustainability by making sure every part of the harvest, even the chaff, serves a purpose.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1860680083331022933" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">925</td>
+                        <td valign="top" align="center">Nov 24, 2024</td>
+                        <td valign="top" align="center"><strong>LOTTO</strong><br>🎟️💰🤑</td>
+                        <td align="center" valign="top">4.48</td>
+                        <td align="left" valign="top">Canada's <a href="https://www.pollardbanknote.com/" target="_blank">Pollard Banknote</a>, headquartered in Winnipeg, plays a major role in the world of lotteries! This Canadian company has been a leader in producing instant lotto tickets for decades, supplying games to lottery corporations around the world. Pollard Banknote is responsible for printing roughly 85 per cent of the scratch-and-win lottery tickets sold in Canada. It's also the second-largest printer of those products in the world! From scratch-off tickets to digital lottery options, Pollard Banknote brings a bit of Canadian creativity and security to lotto experiences far and wide. From coast to coast, chances are, the next scratch ticket you buy has a bit of Canadian innovation behind it.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1861035134985666635" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">926</td>
+                        <td valign="top" align="center">Nov 25, 2024</td>
+                        <td valign="top" align="center"><strong>TOXIC</strong><br>☢️😷🪖</td>
+                        <td align="center" valign="top">4.45</td>
+                        <td align="left" valign="top">During the First World War, a Canadian innovation helped protect soldiers from toxic gases on the battlefield. The <a href="https://www.thecanadianencyclopedia.ca/en/article/hypo-helmet" target="_blank">Hypo Helmet</a>, invented by Newfoundland doctor Captain Cluny Macpherson in 1915, was an early type of gas mask designed to filter out toxic gases like chlorine gas. It was made of a chemically treated flannel hood with a mica visor, and was a crucial development in protecting soldiers from the harmful effects of chemical warfare. This Canadian invention was an important step in the evolution of gas masks, helping to save countless lives during the war.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1861385301135908942" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">927</td>
+                        <td valign="top" align="center">Nov 26, 2024</td>
+                        <td valign="top" align="center"><strong>BUILD</strong><br>🏥💯🏗️</td>
+                        <td align="center" valign="top">4.10</td>
+                        <td align="left" valign="top">Tomorrow (November 27th) marks the 100th anniversary of the Civic campus of <a href="https://www.ottawahospital.on.ca/en/" target="_blank">The Ottawa Hospital</a>! The original red brick hospital was built in 1924 and was the dream of Harold Fisher, Ottawa’s mayor at the time, who envisioned a state-of-the-art building that would bring together three community hospitals struggling under an aging infrastructure and a deadly influenza pandemic. That defining moment in history went on to improve the lives of every citizen of Ottawa and helped lay the foundation for a century of healthcare advances in Canada. Now, a century later, on the heels of another pandemic, a $500-million fundraising campaign is underway to help build a new hospital campus right in the heart of the very community where Mayor Fisher first dared to dream.<br><br>Discover how you can support the <a href="https://ohfoundation.ca/campaign-to-create-tomorrow/" target="_blank">Campaign to Create Tomorrow</a> and help The Ottawa Hospital Foundation build Canada’s most technologically advanced research hospital, reshaping the future of healthcare.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1861748167252808148" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">928</td>
+                        <td valign="top" align="center">Nov 27, 2024</td>
+                        <td valign="top" align="center"><strong>VIPER</strong><br>🐍</td>
+                        <td align="center" valign="top">4.85</td>
+                        <td align="left" valign="top">There are 3 endemic venomous snake species in Canada that fall within the pit viper family: the Western rattlesnake, the Prairie rattlesnake, and the Eastern Massasauga rattlesnake. These pit vipers are equipped with heat-sensing pits that help them hunt small mammals even in the cooler Canadian climate. Though they might seem intimidating, all three rattlesnakes are shy creatures that avoid human contact and play an essential role in controlling rodent populations. Conservation efforts, particularly for the endangered Eastern Massasauga, help protect these unique members of Canada's wildlife. So, next time you think of "viper," remember these important native species, quietly helping keep Canada's ecosystems balanced!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1862107212329488800" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">929</td>
+                        <td valign="top" align="center">Nov 28, 2024</td>
+                        <td valign="top" align="center"><strong>PYGMY</strong><br>🦉</td>
+                        <td align="center" valign="top">4.54</td>
+                        <td align="left" valign="top">The Northern Pygmy Owl, one of Canada's smallest and most elusive birds of prey, is a true example of how big things can come in small packages. Despite its diminutive size - only about the size of a sparrow - this tiny owl is a fierce hunter, preying on small mammals and birds. Found in the forests of British Columbia and the Yukon, the Northern Pygmy Owl is known for its bold, yellow eyes that can give it a fierce look despite its small stature. Its size, combined with its powerful hunting skills, makes it a remarkable part of Canada’s birdlife.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1862484999557009538" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">930</td>
+                        <td valign="top" align="center">Nov 29, 2024</td>
+                        <td valign="top" align="center"><strong>WINZE</strong><br>⛏️🪨👷</td>
+                        <td align="center" valign="top">5.68</td>
+                        <td align="left" valign="top">Located in Timmins, Ontario, the <a href="https://www.glencore.ca/en/kidd/" target="_blank">Kidd Creek Mine</a> is the world's deepest base-metal mine below sea level, with shaft bottom at 3014 metres.  Operating as the deepest operating metalliferous mine in the world, the mine has multiple winzes which connect the different levels. A winze is like a shaft that starts underground. Kidd Creek's depth is more than five times the height of Toronto's CN Tower!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1862856223550275691" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+
 
 
                   </tbody>
@@ -8715,6 +8796,17 @@
                   <tr><td align="center" valign="top">918</td><td align="center" valign="top"><strong>YARDS</strong></td></tr>
                   <tr><td align="center" valign="top">919</td><td align="center" valign="top"><strong>QUAFF</strong></td></tr>
                   <tr><td align="center" valign="top">920</td><td align="center" valign="top"><strong>FIGHT</strong></td></tr>
+
+                  <tr><td align="center" valign="top">921</td><td align="center" valign="top"><strong>JETTY</strong></td></tr>
+                  <tr><td align="center" valign="top">922</td><td align="center" valign="top"><strong>GIZMO</strong></td></tr>
+                  <tr><td align="center" valign="top">923</td><td align="center" valign="top"><strong>LYCRA</strong></td></tr>
+                  <tr><td align="center" valign="top">924</td><td align="center" valign="top"><strong>CHAFF</strong></td></tr>
+                  <tr><td align="center" valign="top">925</td><td align="center" valign="top"><strong>LOTTO</strong></td></tr>
+                  <tr><td align="center" valign="top">926</td><td align="center" valign="top"><strong>TOXIC</strong></td></tr>
+                  <tr><td align="center" valign="top">927</td><td align="center" valign="top"><strong>BUILD</strong></td></tr>
+                  <tr><td align="center" valign="top">928</td><td align="center" valign="top"><strong>VIPER</strong></td></tr>
+                  <tr><td align="center" valign="top">929</td><td align="center" valign="top"><strong>PYGMY</strong></td></tr>
+                  <tr><td align="center" valign="top">930</td><td align="center" valign="top"><strong>WINZE</strong></td></tr>
 
                </tbody>
             </table>
